--- a/app/views/resumes/createtemplate.html.erb
+++ b/app/views/resumes/createtemplate.html.erb
@@ -18,8 +18,8 @@ Font Size (Title)		 <div id="title_font-size" class = "slider"></div>
 Font Size (Headings)	 <div id="section_title_font-size" class = "slider"></div>
 Font Size (Content)		 <div id="body_font-size" class = "slider"></div>
 <form id="form">
-<input type="hidden" id="css_res" form="css_res"/>
-File name 				<input type="text" name="file_name">
+<input type="hidden" id="css_res" name="css_res"/>
+Template name 				<input type="text" id="file_name" name="file_name">
 <button type="button" onclick="save()" class="btn">Save template!</button>
 </form>
 </pre>
@@ -41,7 +41,7 @@ File name 				<input type="text" name="file_name">
 	    	$.ajax({
 	    		type: "GET",
 	    		url: "/resumes/checkcssfile",
-	    		data: {rname: rName},
+	    		data: {file_name: rName},
 	    		async: false,
 	    		success: function(data){
 	    					if(data.valid == "true"){
@@ -55,7 +55,7 @@ File name 				<input type="text" name="file_name">
 	    	if(ret){
 	    		$.post('/resumes/postcssfile', $("#form").serialize(), function(data){
 	    			alert("Success!")
-	    			window.location.href= "/resumes/viewlist"
+	    			window.location.href= "/resumes/createpage"
 	    		});
 			}	
 	}
