Working homepages (without css)

--- a/app/views/homepages/home.html.erb
+++ b/app/views/homepages/home.html.erb
@@ -2,3 +2,4 @@
 <h1> Homepage creator </h1>
 
 <%= button_to "Create Homepage", homepages_create_path, :method => "get", class: "btn btn-primary" %>
+<%= button_to "View Homepages", homepages_view_path, :method => "get", class: "btn btn-primary" %>
