--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     height:     50%;
     width:      50%;
     background: rgba( 255, 255, 255, 1 ) 
-                url('http://jimpunk.net/Loading/wp-content/uploads/loading1.gif') 
+                url('/loading.gif') 
                 50% 50% 
                 no-repeat;
 }
