--- a/app/views/homepages/create.html.erb
+++ b/app/views/homepages/create.html.erb
@@ -8,7 +8,7 @@
 	</div>
 	<div class="col-md-6" id="form_div">
 		<!-- move this to an appropriate file -->
-		<%= form_tag(resumes_postdata_path, method: "post", id: "form") do %>
+		<%= form_tag(homepages_postdata_path, method: "post", id: "form") do %>
 			<label class="fieldname">
 				File Name :
 			</label>
@@ -503,7 +503,7 @@ $(function() {
     	ret = false
     	$.ajax({
     		type: "GET",
-    		url: "/resumes/checkdata",
+    		url: "/homepages/checkdata",
     		data: {rname: rName},
     		async: false,
     		success: function(data){
@@ -516,9 +516,9 @@ $(function() {
     				}
     	})
     	if(ret){
-    		$.post('/resumes/postdata', $(this).serialize(), function(data){
+    		$.post('/homepages/postdata', $(this).serialize(), function(data){
     			console.log(data);
-    			window.location.href="/resumes/viewlist"
+    			window.location.href="/homepages/view"
     		});
 		}
     });
