css2 added for homepage

--- a/app/views/homepages/create.html.erb
+++ b/app/views/homepages/create.html.erb
@@ -227,7 +227,7 @@
     					<div id="footer-content">\
         				&copy; Me\
         				<br>\
-        				Feedback is not welcome :P.\
+        				Feedback is welcome :P.\
     					</div>\
     					</div>'
 		document.getElementById("homepage").innerHTML = data;
@@ -400,12 +400,14 @@ height: 100px;
 width: 100%;
 /*position: fixed;*/
 top: 0;
-background: #770f0f;
-font: 400 80px Italianno, Georgia, serif;
-color: #ffffff;
+background: #122A0A;
+/*font: 400 80px Italianno, Georgia, serif;*/
+font: 400 80px Courier, monospace;
+color: #F7FE2E;
 }#header-content {
 margin: 0 auto;
 padding: 0;
+margin-left: 10px;
 width: 1000px;
 /*background-size: 70px;*/
 }#menu {
@@ -414,7 +416,7 @@ height: 40px;
 width: 100%;
 /*position: fixed;*/
 top: 100px;
-background: #f2f1eb;
+background: #9FF781;
 }#menu-content {
 width: 1000px;
 margin: 0 auto;
@@ -436,8 +438,8 @@ text-decoration: none;
 border: none;
 color: #222222;
 }#left-menu ul li a:hover {
-color: #222222;
-border-bottom: 2px solid #770f0f;
+color: #A9E2F3;
+border-bottom: 2px solid #A9E2F3;
 }
 #menugap {
 clear: both;
@@ -461,8 +463,8 @@ clear: both;
 margin: 20px auto 0 auto;
 width: 100%;
 min-height: 50px;
-background: #770f0f;
-color: #ffffff;
+background: #122A0A;
+color: #F7FE2E;
 /*vertical-align: bottom;*/
 /*position: absolute;
     bottom: 0px;
@@ -492,7 +494,9 @@ visibility: hidden;
 }
 h1 {
 margin-top: 50px;
-color: #770f0f;
+color: #122A0A;
+font-family: courier;
+margin-left: 25px;
 }
 h2 {
 margin-top: 50px;
