with final report

--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -344,7 +344,7 @@
 		var result=""
 		$.ajax({
     		type: "GET",
-    		url: "/homepages/cssapi",
+    		url: "/resumes/cssapi",
     		data: {css_template: $("#css_template option:selected").text()},
     		async: false,
     		success: function(data){
