--- a/app/views/resumes/createpage.html.erb
+++ b/app/views/resumes/createpage.html.erb
@@ -344,7 +344,7 @@
 		var result=""
 		$.ajax({
     		type: "GET",
-    		url: "/homepages/cssapi",
+    		url: "/resumes/cssapi",
     		data: {css_template: $("#css_template option:selected").text()},
     		async: false,
     		success: function(data){
@@ -363,63 +363,25 @@
 			$(this).innerHTML = '^';
 	}
 </script>
-<!--<style>
+<style>
 .page{
 		padding : 10pt;
 		width : 60%;
 		height : 1000px;
 		margin: 10pt;
 		border: solid black 1pt;
-		background-color: #F4F9FB;
 	}
 	.fieldname{
 		font-weight: bold;
 	}
 	.formgroup{
-		background-color: #eee;
+		
 	}
 	.checkbox{
 
 	}
-.name{
-	text-align: left;
-	font-size: 35px;
-	margin-bottom: -10px;
-	padding-bottom: 0px;
-	color: #050560;
-}
-.contacts{
-	font-size: 16px;
-	font-weight: bold;
-	margin-bottom: 10px;
-	margin-top: 0px;
-	text-align: right;
-	color: #050560;
 
-}
-.section_title{
-	font-weight: bold;
-	font-size: 16px;
-	background-color: #DBE5E9;
-	text-align: left;
-	color: #050560;
-}
-.list{
-	list-style-type: square;
-	font-size: 16px;
-	/*margin-left: 50px;*/
-}
-table{
-	font-size: 16px;
-	color: #050560;
-}
-td{
-	font-size: 16px;
-}
-hr{
-	color: #050560;
-}
-</style>-->
+</style>
 
 <script>
 // For verification of name before submission'
